# HydLabelHeight

./: README.md
aruco/: CMakeLists.txt  package.xml
aruco/launch/: aruco.launch
aruco/src/: aruco.py  aruco_cap.py  aruco_d455.py  aruco_l515.py  aruco_l515_2.py  aruco_l515_test.py  aruco_pub.py  aruco_pub_test.py  sub_test.py
control/: package.xml
control/src/: control.py  control2.py  control3.py  control4.py  dwa_pub_test_only.py  pub_want_top.py
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/launch/: tf.launch
robot_setup_tf/src/: aruco_d455.py  aruco_l515.py  baselink_linkbase.py  d455_baselink.py  l515_linkbase.py  tf_listen_test.py  velodyne_baselink.py
scout_move/: CMakeLists.txt  package.xml  setup.py
scout_move/scripts/: L515_aruco_xyz_rospy.py  cameras_broadcaster.py  cameras_listener.py  control.py  fixed_tf.py  go2goal.py  move.py  scout_move.py  try1.py  try2.py  try3.py  try4.py
src/: config.py  dataset.py  height_estim.py  image_label_rename.py  main.py  pcd_split.py  plane_estim.py  visualizer.py
xarm_move/: CMakeLists.txt  package.xml
xarm_move/src/: try1.cpp  try2.cpp  xarm_demo.cpp  xarm_move.cpp
